# verbal

./: .gitignore  AGENTS.md  DESIGN.md  Makefile  README.md  eslint.config.js  go.mod  go.sum  package-lock.json  package.json  vite.config.ts
cmd/verbal/: e2e_smoke_test.go  main.go  open_load_test.go
conductor/: autonomous_prompt.md  current_directive.md  lessons-learned.md  product.md  review-prompt.md  tech-debt.md  tech-stack.md  tracks.md  webcam_issue.md
internal/ai/: env.go  env_test.go  errors.go  errors_test.go  factory.go  factory_test.go  google.go  google_test.go  integration_test.go  openai.go  openai_test.go  provider.go  provider_test.go  smoke_test.go
internal/db/: repository.go  repository_test.go  service.go  service_test.go  settings_repository.go  settings_repository_test.go  thumbnail_repository.go  thumbnail_repository_test.go
internal/filler/: filler.go  filler_test.go
internal/lifecycle/: models.go  (+14 more)
measure/: autonomous_prompt.md  index.md  product-guidelines.md  product.md  review-prompt.md  tech-stack.md  tracks.md  webcam_issue.md  workflow.md
src/: App.test.tsx  App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: test_camera.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: credentials.rs  google.rs  mod.rs  openai.rs
src-tauri/src/audio/: mod.rs  temp.rs
src-tauri/src/commands/: ai.rs  mod.rs  transcription.rs
src-tauri/src/cut_list/: mod.rs
src-tauri/src/error/: mod.rs
src-tauri/src/ffmpeg/: extractor.rs  mod.rs
src-tauri/src/transcription/: filler.rs  jobs.rs  mod.rs  orchestrator.rs
(+267 files in other folders)
