[package]
name = "verbal"
version = "0.1.0"
description = "A next-generation desktop media editor for Linux"
authors = ["Verbal Team"]
edition = "2021"

[lib]
name = "verbal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dunce = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }
async-trait = "0.1"
keyring = "3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
crabcamera = { version = "0.8", features = ["recording"] }

[dev-dependencies]
tempfile = "3"
mockito = "1"
